# nimble

./: Cargo.toml  GOALS.md  tasks.txt
.github/workflows/: beta.yml  release.yml
src/: config.rs  lib.rs  main.rs  md5_digest.rs  mod_cache.rs  repository.rs  srf.rs  ui.rs
src/commands/: diff.rs  download.rs  gen_srf.rs  launch.rs  mod.rs  scan.rs  sync.rs  types.rs
src/gui/: config.rs  mod.rs  state.rs  tests.rs
src/gui/panels/: create_repo_panel.rs  gen_srf_panel.rs  launch_panel.rs  mod.rs  sync_panel.rs
src/gui/panels/create_repo/: actions.rs  mod.rs  panel.rs  scanner.rs  state.rs  ui.rs
src/gui/panels/gen_srf/: actions.rs  mod.rs  panel.rs  state.rs  ui.rs
src/gui/panels/repo/: actions.rs  connection.rs  mod.rs  panel.rs  profile.rs  state.rs
src/gui/panels/repo/ui/: connection_status.rs  local_info.rs  mod.rs  operations.rs  repository_info.rs
src/gui/panels/server/: mod.rs  repository_view.rs  server_actions.rs  server_state.rs  server_ui.rs
src/gui/panels/server_panel/: connection_view.rs  mod.rs  repository_view.rs
src/gui/widgets/: command_handler.rs  mod.rs  path_picker.rs  status_display.rs
test_files/: example_repo.json
