[package]
name = "nimble"
version = "0.1.0"
edition = "2021"
authors = ["Victor Chiletto <v@hnn.net.br>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/vitorhnn/nimble/"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
md-5 = { version = "0.10", features = [] }
byteorder = "1"
ureq = { version = "2", features = ["tls", "json"] }
relative-path = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
indicatif = "0.17"
tempfile = "3"
hex = "0.4"
open = "3"
percent-encoding = "2"
eframe = "0.30.0"
rfd = "0.15.2"
dirs = "5.0"
semver = "1.0"
sha1 = "0.10.6"
opener = "0.7.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# tinyvec = { version = "1.5", features = ["alloc", "rustc_1_55"] }

[[bin]]
name = "nimble-cli"
path = "src/bin/cli-main.rs"

[[bin]]
name = "nimble-gui"
path = "src/bin/gui-main.rs"
